[CM_BE-12] Changing /users api to /patients/profile
